Fix the new activity indicator on small screens
Fixes: FALCOR-518

Test plan:

- The new activity indicator should now look like this
  on phone -> tablet screens:
  https://www.screencast.com/t/AYRVXNSThpy

- The new activity indicator should be unchanged on
  desktop-up-size screens

Reviewed-on: https://gerrit.instructure.com/120060
Tested-by: Jenkins
QA-Review: Dan Sasaki <dsasaki@instructure.com>
Product-Review: Christi Wruck

--- a/src/components/Grouping/styles.css
+++ b/src/components/Grouping/styles.css
@@ -6,6 +6,7 @@
   border-color: var(--groupColor);
   color: var(--groupColor);
   line-height: var(--lineHeight);
+  position: relative;
 }
 
 .title {
@@ -96,11 +97,18 @@
   color: var(--groupColor);
 }
 
-.activityIndicator {
+.activityIndicator.hasBadge {
+  background: var(--activityIndicatorBackground);
+  width: var(--activityIndicatorBorderSize);
+  height: var(--activityIndicatorBorderSize);
   display: flex;
   align-items: center;
-  width: var(--activityIndicatorWidth);
-  padding: var(--activityIndicatorPadding);
+  justify-content: center;
+  position: absolute;
+  top: -0.25rem;
+  right: -0.25rem;
+  z-index: 1;
+  border-radius: 100%;
 }
 
 [data-media-medium] {
@@ -125,6 +133,22 @@
   .items {
     flex: 1;
     border-top: var(--borderTopWidthTabletUp) solid;
+  }
+
+  .activityIndicator {
+    width: var(--activityIndicatorWidth);
+    padding: var(--activityIndicatorPadding);
+
+    &.hasBadge {
+      background: transparent;
+      width: auto;
+      height: auto;
+      position: static;
+      top: auto;
+      right: auto;
+      z-index: auto;
+      border-radius: 0;
+    }
   }
 }
 
